--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 pyitlib
 scikit-learn
 seaborn
-matplotlib==3.1.2
-pandas==0.25.2
-pyprind==2.11.2
-torch==1.4.0
-numpy==1.18.1
-attrs==19.3.0
-https://github.com/phueb/Ludwig/archive/v2.1.3.tar.gz
+matplotlib
+pandas
+pyprind
+torch
+numpy
+attrs
+https://github.com/phueb/Ludwig/archive/v3.0.0.tar.gz
 https://github.com/phueb/Preppy/archive/v2.0.0.tar.gz
-https://github.com/phueb/CategoryEval/archive/v3.0.0.tar.gz
+https://github.com/phueb/CategoryEval/archive/v3.1.0.tar.gz
