--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,8 @@ seaborn
 matplotlib
 pandas
 pyprind
-torch
-numpy
-attrs
-https://github.com/phueb/Ludwig/archive/v3.0.0.tar.gz
+torch==1.6
+numpy==1.18
+https://github.com/phueb/Ludwig/archive/v4.0.1.tar.gz
 https://github.com/phueb/Preppy/archive/v2.0.0.tar.gz
-https://github.com/phueb/CategoryEval/archive/v3.1.0.tar.gz
+https://github.com/phueb/CategoryEval/archive/v3.2.0.tar.gz
