--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,9 @@ pandas
 pyprind
 torch==1.6
 numpy==1.18.1
+tokenizers==0.10.1
 https://github.com/phueb/Ludwig/archive/v4.0.2.tar.gz
-https://github.com/phueb/Preppy/archive/v2.1.0.tar.gz
+https://github.com/phueb/Preppy/archive/v3.0.0.tar.gz
 https://github.com/phueb/CategoryEval/archive/v4.0.0.tar.gz
 https://github.com/phueb/OrderMatters/archive/v1.0.0.tar.gz
 https://github.com/UIUCLearningLanguageLab/AOCHILDES/archive/v2.0.0.tar.gz
